Atualizar o contato.html

--- a/contato.html
+++ b/contato.html
@@ -56,10 +56,13 @@
 
             <form method="post" action="contato.php">
                 <legend>
-                    <h4> Entre em contato conosco <br><br> </h4>
+                    <h4> Entre em contato conosco <br>
+<br> 
+</h4>
                 </legend>
                 <p> <label form="nomec">Nome: </label><br>
-                    <input type="text" name="nome"> <br><br>
+                    <input type="text" name="nome"> <br>
+<br>
                 </p>
                 <p> <label form="sobrenome">Sobrenome: </label><br>
                     <input type="text" name="sobrenome"> <br><br>
@@ -91,6 +94,7 @@
     </footer> <br>
 
     <h3> Todos os direitos reservados - Desenvolvido por Thais Napolitano</h3> <br>
+
 </body>
 
 </html>
